--- a/tools/gen_addon_readme.template
+++ b/tools/gen_addon_readme.template
@@ -74,7 +74,7 @@ OCA, or the Odoo Community Association, is a nonprofit organization whose
 mission is to support the collaborative development of Odoo features and
 promote its widespread use.{% endif %}
 
-{%- if manifest.maintainers %}
+{%- if manifest.maintainers and organization == 'OCA' %}
 {% for maintainer in manifest.maintainers %}
 .. |maintainer-{{ maintainer }}| image:: https://github.com/{{ maintainer }}.png?size=40px
     :target: https://github.com/{{ maintainer }}
@@ -88,5 +88,5 @@ Current `maintainer{% if manifest.maintainers|length > 1 %}s{% endif %} <https:/
 
 This module is part of the `{{ organization }}/{{ repo_name }} <https://github.com/{{ organization }}/{{ repo_name }}/tree/{{ branch }}/{{ addon_name }}>`_ project on GitHub.
 
-You are welcome to contribute. To learn how please visit https://odoo-community.org/page/Contribute.
+You are welcome to contribute.{% if organization == 'OCA' %} To learn how please visit https://odoo-community.org/page/Contribute.{% endif %}
 
